--- a/app/views/speakers/new.html.haml
+++ b/app/views/speakers/new.html.haml
@@ -2,6 +2,8 @@
   =form_for @speaker do |f|
     %p Name:
     %p= f.text_field :name
+    %p Email
+    %p= f.text_field :email
     %p Bio
     %p= f.text_area :bio
     %p Event
