--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -3,9 +3,14 @@
   /     %a(href='/2013' class="ssc_announcement")
   /       #text Speak At TEDxYale 2013
   .signup 
-    %h1 Get Involved with TEDxYale
-    %h2 You'll thank us later...
-    #user_form.form
+    / %h1 Get Involved with TEDxYale
+    /     %h2 You'll thank us later...
+    /     #user_form.form
+    %a( href='/2013' )
+      %img( src="/assets/2013_header.jpg")
+    %span 25 Speakers.
+    %span 1 Day.
+    %a( href="/early_bird" class="announcement-button" ) Get Your Early Bird Ticket
   .icons
     .icon.events
       %a.symbol.events( href="/events" )
