--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -64,10 +64,8 @@
 		      <div class="header_item user">
 		        <div class='name'>
 		          <%= current_user.name %>
-		          <div class="user_icon"><%= current_user.votes.count %></div>
 		        </div>
 		        <ul class="dropdown_menu">
-  			      <li><a class="votes_left" href="/2013"><%= current_user.votes.count %> votes made</a></li>
   			      <li><a href="/admin/events">Admin</a></li>
   			      <li><a href="/wiki">Wiki</a></li>
   			      <li><a href="/logout">Logout</a></li>
@@ -79,10 +77,8 @@
 		      <div class="header_item user">
 		        <div class='name'>
 		          <%= current_user.name %>
-		          <div class="user_icon"><%= current_user.votes_left %></div>
 		        </div>
 		        <ul class="dropdown_menu">
-  			      <li><a class="votes_left" href="/2013"><%= current_user.votes_left %> votes left</a></li>
   			      <li><a href="/logout">Logout</a></li>
   			    </ul>
   			  </div>
@@ -95,7 +91,7 @@
 	          <%= current_speaker.name %>
 	        </div>
 	        <ul class="dropdown_menu">
-			      <li><a href="/speaker">Speaker Profile</a></li>
+			      <li><a href="/speaker">Speaker Dashboard</a></li>
 			      <li><a href="/logout">Logout</a></li>
 			    </ul>
 			  </div>
