--- a/app/views/speakers/admin.html.haml
+++ b/app/views/speakers/admin.html.haml
@@ -25,7 +25,7 @@
         %br
         <input type='checkbox' disabled='disabled' #{@speaker.talk_about && !@speaker.talk_about.empty? ? "checked" : ''}><a href="/speaker/talk">Submit a bulleted summary of your talk (this can be very brief)</a></input>
         %h5 To be completed by February 16th:
-        %input(type = 'checkbox' disabled='disabled') Send speakers@tedxyale.com your complete slide show (with .pptx extension)
+        %input(type = 'checkbox' disabled='disabled') Send your complete slide show (with .pptx extension) to speakers@tedxyale.com 
         
         
         
