--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -16,6 +16,12 @@
   font-weight: normal;
 }
 
+@mixin transition ($transition) {
+	-webkit-transition: #{$transition};  
+	-moz-transition:    #{$transition};
+	-ms-transition:     #{$transition};
+	-o-transition:      #{$transition};  
+}
 
 .registration_back {
 	background: #fff;
@@ -683,90 +689,94 @@
   position: relative;
   top: -30px;
 }
-/* Header */
-.conference-header {
-  width: 100%;
-  height: 30px;
-  position: fixed;
-  top: 80px;
-  left: 0px;
-  border-bottom: 1px solid black;
-  border-top: 2px solid red;
-  background: black;
-  opacity: .85;
-  a {
-    font-size: 15px;
-    line-height: 30px;
-    @include HN-Bold;
-    color: white;
-    margin-right: 20px;
-    text-decoration: none;
-    -webkit-transition: 0.2s;
-    &:hover {
-      color: red;
-    }
-  }
-  a.register_to_attend {
-    float: right;
-    margin-right: 0px;
-    background: red;
-    padding: 0 15px;
-    line-height: 31px;
-    &:hover {
-      color: white;
-      background: #cc0000;
-    }
-  }
-}
 
 /* Body */
 .conference-container {
   width: 1000px;
   margin: auto;
-  h1 {
+  padding: 20px 0;
+  border-bottom: 1px solid #dadada;
+  h3 {
+    span {
+      @include HN-Light;
+      font-size: 50px;
+    }
     @include HN-Bold;
-    color: #333;
+    color: black;
     font-size: 50px;
     line-height: 50px;
-    padding-bottom: 5px;
-    border-bottom: 3px solid #aaa;
+    margin: 0px;
   }
-}
-.theme {
-  height: 300px;
-  position: relative;
-  .theme-left {
-    @include HN-Bold;
-    position: absolute;
-    top: 70px;
-    color: white;
-    font-size: 100px;
-    width: 300px;
-    line-height: 90px;
-  }
-  .theme-right {
-    @include HN-Light;
-    position: absolute;
-    top: 70px;
-    right: 0px;
+  p {
+    @include HN-Regular;
+    font-size: 14px;
   }
 }
 .conference-body {
   width: 100%;
   min-width: 1000px;
-  min-height: 300px;
-  &.grey {
-    background: #eee;
-    border-top: 1px solid #dadada;
-    border-bottom: 1px solid #dadada;
-  }
-  &.home {
-    background-image: url('/assets/ted_bg.png');
-    background-size: 100%;
-    background-repeat: no-repeat;
-    background-position: top;
-  }
   img {
     width: 1000px;
+  }
+}
+
+.home {
+  border: 0;
+  margin-bottom: 20px;
+  img {
+    margin-top: 50px;
+  }
+}
+
+.tickets {
+  height: 500px;
+  background-image: url('/assets/ted_bg.png');
+  background-size: 100%;
+  background-position: center -100px;
+  background-repeat: no-repeat;
+  padding: 10px 0;
+  //@include transition(0.1s);
+  &.zoomed {
+    background-size: 130%;
+  }
+  .social-bar {
+    margin-top: 30px;
+  }
+  .reserve-ticket {
+    width: 450px;
+    display: block;
+    position: absolute;
+    top: 50px;
+    background: transparent;
+    .head {
+      @include HN-Light;
+      color: white;
+      font-size: 50px;
+      line-height: 60px;
+      text-align: left;
+    }
+    .sub {
+      @include HN-Light;
+      font-size: 25px;
+      line-height: 30px;
+      color: white;
+      margin-bottom: 15px;
+    }
+    button {
+      border: 1px solid #777;
+      border-radius: 5px;
+      @include HN-Regular;
+      font-size: 40px;
+      opacity: 1;
+      color: white;
+      background-color: transparent;
+      padding: 10px;
+      border: 1px solid white;
+      @include transition(0.2s);
+      cursor: pointer;
+      &:hover {
+        background: #222;
+      }
+    }
   }
 }
