--- a/app/views/admin/show_speaker.html.haml
+++ b/app/views/admin/show_speaker.html.haml
@@ -70,6 +70,9 @@
           %td Talk Title
           %td= @speaker.talk_title
         %tr
+          %td Talk Length
+          %td= @speaker.time_limit
+        %tr
           %td Talk Summary
           %td= @speaker.talk_about
     %h1 Release Form
