--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,7 +10,7 @@
       %img( src="/assets/2013_header.jpg")
     %span 25 Speakers.
     %span 1 Day.
-    %a( href="/early_bird" class="announcement-button" ) Get Your Early Bird Ticket
+    %a( href="http://www.eventbrite.com/event/4584153326" target="_blank" class="announcement-button" ) Get Your Early Bird Ticket
   .icons
     .icon.events
       %a.symbol.events( href="/events" )
