--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -1,38 +1,30 @@
-<div class="conference-header">
-  <div class="conference-container">
-    <a href="#">Solve for y</a>
-    <a href="#speakers">Speakers</a>
-    <a href="#when">When & Where</a>
-    <a href="#schedule">Schedule</a>
-    <a href="#partners">Partners</a>
-    <a href="/early_bird" class="register_to_attend">Register to Attend</a>
+<div class="conference-body">
+  <div class="conference-container home">
+    <img src="/assets/2013_header.jpg"/>
   </div>
 </div>
-<div class="conference-body home">
-  <div class="conference-container">
-    <div class="theme">
-      <div class="theme-left">Solve for y</div>
-      <div class="theme-right">February 23rd<br/>Shubert Theater</div>
+<div class="conference-body tickets">
+  <div class="wrapper">
+    <!-- Social -->
+    <div class="reserve-ticket">
+      <div class="head">Reserve Your Ticket</div>
+      <div class="sub">And pick it up with the TEDxYale team in the Commons Rotunda</div>
+      <a href="http://www.eventbrite.com/event/4584153326" target="_blank"><button>Buy It here</button></a>
+      <div class="social-bar">
+        <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Ftedxyale.com%2F2013&amp;send=false&amp;layout=button_count&amp;width=150&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=203704693056770" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
+          <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tedxyale.com/2013" data-text="Join me at TEDxYale 2013 on February 23rd" data-hashtags="TEDxYaleStudentSpeakerCompetition">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+      </div>
     </div>
   </div>
 </div>
-<div class="conference-body grey speakers">
-  <div class="conference-container">
-    <h1>The Speakers</h1>
+<div class="conference-body">
+  <div class="conference-container theme">
+    <h3><span>Theme:</span> Solve for y</h3>
+    <p>Our theme is "Solve for y," and it is meant to challenge our speakers to explain their unique "y," the key ingredient to their work and inspiration, and describe "why" it is significant. More than any other variable, "y" also represents the speakers' common ground, Yale.</p>
   </div>
-</div>
-<div class="conference-body when">
-  <div class="conference-container">
-    <h1>When & Where</h1>
-  </div>
-</div>
-<div class="conference-body grey schedule">
-  <div class="conference-container">
-    <h1>The Schedule</h1>
-  </div>
-</div>
-<div class="conference-body partners">
-  <div class="conference-container">
-    <h1>The Partners</h1>
-  </div>
+  <!-- <div class="conference-container speakers">
+      <h3><span>The</span> Speakers</h3>
+      <p>Speakers</p>
+    </div> -->
 </div>
