--- a/app/views/admin/speakers.html.haml
+++ b/app/views/admin/speakers.html.haml
@@ -10,16 +10,16 @@
           %th Name
           %th Email
           %th Event
-          %th Short Bio
           %th Twitter
           %th Talk Title
+          %th Status
           %th
         - @speakers.each do |speaker|
           %tr
             %td.name= speaker.name
             %td.email= speaker.email
             %td.event= speaker.event ? speaker.event.name : ""
-            %td.bio= speaker.short_bio
             %td.twitter= speaker.twitter
             %td.title= speaker.talk_title
+            %td.status= speaker.status_percentage
             %td= link_to "Show", "/admin/speakers/#{speaker.id}"
