--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -9,7 +9,7 @@
     <div class="reserve-ticket">
       <div class="head">Reserve Your Ticket</div>
       <div class="sub">And pick it up with the TEDxYale team in the Commons Rotunda</div>
-      <a href="http://www.eventbrite.com/event/4584153326" target="_blank"><button>Buy It here</button></a>
+      <a href="http://purchase.tickets.com/buy/TicketPurchase?agency=TDC&pid=7422199" target="_blank"><button>Buy It here</button></a>
       <div class="social-bar">
         <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Ftedxyale.com%2F2013&amp;send=false&amp;layout=button_count&amp;width=150&amp;show_faces=false&amp;font&amp;colorscheme=light&amp;action=like&amp;height=21&amp;appId=203704693056770" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe>
           <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://tedxyale.com/2013" data-text="Join me at TEDxYale 2013 on February 23rd" data-hashtags="TEDxYaleStudentSpeakerCompetition">Tweet</a>
@@ -23,8 +23,16 @@
     <h3><span>Theme:</span> Solve for y</h3>
     <p>Our theme is "Solve for y," and it is meant to challenge our speakers to explain their unique "y," the key ingredient to their work and inspiration, and describe "why" it is significant. More than any other variable, "y" also represents the speakers' common ground, Yale.</p>
   </div>
-  <!-- <div class="conference-container speakers">
-      <h3><span>The</span> Speakers</h3>
-      <p>Speakers</p>
-    </div> -->
+  <div class="conference-container speakers">
+    <h3><span>The</span> Speakers</h3>
+    <div id="speakers-container"></div>
+  </div>
+  <div class="conference-container schedule">
+    <h3><span>Schedule:</span> Feb. 23rd</h3>
+    <p>Schedule</p>
+  </div>
+  <div class="conference-container partners">
+    <h3><span>The</span> Partners</h3>
+    <p>Gant</p>
+  </div>
 </div>
