--- a/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/index.jst.ejs
@@ -23,16 +23,16 @@
     <h3><span>Theme:</span> Solve for y</h3>
     <p>Our theme is "Solve for y," and it is meant to challenge our speakers to explain their unique "y," the key ingredient to their work and inspiration, and describe "why" it is significant. More than any other variable, "y" also represents the speakers' common ground, Yale.</p>
   </div>
-  <div class="conference-container speakers">
-    <h3><span>The</span> Speakers</h3>
-    <div id="speakers-container"></div>
-  </div>
-  <div class="conference-container schedule">
-    <h3><span>Schedule:</span> Feb. 23rd</h3>
-    <p>Schedule</p>
-  </div>
-  <div class="conference-container partners">
-    <h3><span>The</span> Partners</h3>
-    <p>Gant</p>
-  </div>
+  <!-- <div class="conference-container speakers">
+      <h3><span>The</span> Speakers</h3>
+      <div id="speakers-container"></div>
+    </div>
+    <div class="conference-container schedule">
+      <h3><span>Schedule:</span> Feb. 23rd</h3>
+      <p>Schedule</p>
+    </div>
+    <div class="conference-container partners">
+      <h3><span>The</span> Partners</h3>
+      <p>Gant</p>
+    </div> -->
 </div>
