--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -10,7 +10,7 @@
       %img( src="/assets/2013_header.jpg")
     %span 25 Speakers.
     %span 1 Day.
-    %a( href="/2013" target="_blank" class="announcement-button" ) Reserve Your Ticket Now
+    %a( href="/2013" class="announcement-button" ) Reserve Your Ticket Now
   .icons
     .icon.events
       %a.symbol.events( href="/events" )
