delete speaker button

--- a/app/assets/stylesheets/admin.css.scss
+++ b/app/assets/stylesheets/admin.css.scss
@@ -431,4 +431,9 @@
       padding-right: 10px;
     }
   }
+  .delete-speaker {
+    display: block;
+    margin-top: 20px;
+    @include HN-Bold;
+  }
 }
