--- a/app/assets/javascripts/backbone/templates/conference/blank_speaker.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/blank_speaker.jst.ejs
@@ -1,3 +1,3 @@
-<div class="conference-speaker">
-  Speaker
+<div class="conference-speaker" style="background-color: <%= color %>">
+  <div class="name">Unannounced Speaker</div>
 </div>
