--- a/app/assets/javascripts/backbone/templates/conference/speaker.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/speaker.jst.ejs
@@ -1,3 +1,3 @@
-<div class="conference-speaker">
-  <div class="name"><%= name %></div>
+<div class="conference-speaker" style="background-image: url(<%= thumbnail %>)" data-id=<%= id %>>
+  <div class="name" data-id=<%= id %>><%= name %></div>
 </div>
