--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -780,3 +780,112 @@
     }
   }
 }
+
+.speakers {
+  
+  $speaker-width: 250px;
+  $speaker-height: 200px;
+  
+  #speakers-container {
+    margin-top: 20px;
+  }
+  
+  .conference-speaker {
+    float: left;
+    width: $speaker-width;
+    height: $speaker-height;
+    background-position: center;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    position: relative;
+    @include transition(0.2s);
+    cursor: pointer;
+    .name {
+      @include HN-Bold;
+      color: black;
+      font-size: 30px;
+      position: absolute;
+      padding-left: 5px;
+      bottom: 5px;
+      text-align: left;
+      line-height: 40px;
+      width: 80%;
+    }
+    &:hover {
+      opacity: 0.7;
+    }
+  }
+  
+  #speakers-break {
+    clear: both;
+  }
+}
+
+#lightbox {
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 5;
+  opacity: 1;
+  #background {
+    width: 100%;
+    height: 100%;
+    background: white;
+    opacity: 0.6;
+  }
+  &.hidden {
+    opacity: 0;
+    z-index: -5;
+  }
+  #lightbox-container {
+    width: 600px;
+    margin-top: 100px;
+    min-height: 200px;
+    background: white;
+    position: absolute;
+    top: 0px;
+    left: 50%;
+    margin-left: -301px;
+    border: 1px solid #dadada;
+    .lightbox-header {
+      border-bottom: 1px solid #dadada;
+      @include HN-Bold;
+      font-size: 30px;
+      line-height: 30px;
+      padding: 10px 15px;
+      .close {
+        float: right;
+        @include HN-Regular;
+        font-size: 12px;
+        cursor: pointer;
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
+    .bio {
+      padding: 15px;
+      @include HN-Regular;
+      font-size: 13px;
+      line-height: 17px;
+      display: table-cell;
+      vertical-align: top;
+      padding-left: 0px;
+      .meta {
+        border-bottom: 1px solid #dadada;
+        padding-bottom: 5px;
+        margin-bottom: 5px;
+      }
+    }
+    .image {
+      width: 175px;
+      display: table-cell;
+      padding: 15px;
+      img {
+        width: 175px;
+      }
+    }
+  }
+}
