--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -794,7 +794,7 @@
     float: left;
     width: $speaker-width;
     height: $speaker-height;
-    background-position: center;
+    background-position: 0 -20px;
     background-size: 100%;
     background-repeat: no-repeat;
     position: relative;
