--- a/app/assets/stylesheets/events.css.scss
+++ b/app/assets/stylesheets/events.css.scss
@@ -794,7 +794,7 @@
     float: left;
     width: $speaker-width;
     height: $speaker-height;
-    background-position: 0 -20px;
+    background-position: 0 -50px;
     background-size: 100%;
     background-repeat: no-repeat;
     position: relative;
@@ -810,6 +810,9 @@
       text-align: left;
       line-height: 40px;
       width: 80%;
+      &.white {
+        color: white;
+      }
     }
     &:hover {
       opacity: 0.7;
