--- a/app/assets/javascripts/backbone/templates/conference/speaker.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/conference/speaker.jst.ejs
@@ -1,3 +1,3 @@
-<div class="conference-speaker" style="background-image: url(<%= speaker.get('thumbnail') %>); background-position: <%= crop %>" data-id=<%= speaker.id %>>
+<div class="conference-speaker" style="background-image: url('<%= speaker.get("thumbnail") %>'); background-position: <%= crop %>" data-id=<%= speaker.id %>>
   <div class="name white" data-id=<%= speaker.id %>><%= speaker.get('name') %></div>
 </div>
